Create logic for creating a jobListing